package com.example.homework.Facade_pattern;

public class Alarm {
    public void alarmOn() {
        System.out.println("Alarm is on.");
    }

    public void alarmOff() {
        System.out.println("Alarm is off.");
    }
}

