package com.example.homework.Facade_pattern;

public class Camera {
    public void turnOn() {
        System.out.println("Camera is on.");
    }

    public void turnOff() {
        System.out.println("Camera is off.");
    }
}

