package com.example.homework.Facade_pattern;

public class Sensor {
    public void activate() {
        System.out.println("Sensor is activated.");
    }

    public void deactivate() {
        System.out.println("Sensor is deactivated.");
    }
}

